# libopencblsc-

./: CMakeLists.txt  Makefile  README.md  build.sh
Docker/: manylinux1.dockerfile  run_docker.sh
cmake/: cpp.cmake  python.cmake
src/algorithm/: CMakeLists.txt  algorithm.cpp  algorithm.h  algorithms.h  simple_hill_climbing.cpp  solver.cpp  solver.h  tabu_search.cpp
src/api/: algorithm.h
src/api/pyopencbls/: __init__.py  api.py  constraint.py  operation.py  setup.py.in  solver.py
src/basics/: CMakeLists.txt  constant.h  raw_ptr.h  utility.cpp  utility.h
src/capi/: CMakeLists.txt  algorithm.cpp  algorithm.h  model.cpp  model.h
src/capi/python/: CMakeLists.txt  capi.i
src/model/: CMakeLists.txt  combinatoric_constraint.cpp  combinatoric_constraint.h  constraint.cpp  constraint.h  expression.cpp  expression.h  numeric_constraint.cpp  numeric_constraint.h  op_impl.cpp  op_impl.h
src/test/: cmain.c  main.cpp
test/: test.py
